--- a/index.html
+++ b/index.html
@@ -1,32 +1,12 @@
 <!DOCTYPE html>
-<html lang+"en">
-    <head>
+<html>
+<head>
+  <title>Chris's Auto Detailing</title>
     <meta charset="UTF-8>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Chris's Auto Detailing</title>
-      <style>
-          html {font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-        
-        }
-        #background {
-            background-color: blueviolet;
-
-        }
-
-      </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
- <body>
-    <header>
-        <h1>Chris's Auto Detailing</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a>About Me</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div>
-        <p><strong>Hey, Im Chris a local to Long Beach</p></strong>
-    </div>
+<body>
+  <h1>Chris's Auto Detailing</h1>
+  <img src="‪file:///C:/Users/gloch/Pictures/LBCW/wash%202.0.png">
 </body>
-</html> 
+</html>
