--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8>
+<meta name="viewport; content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="file:///C:/Users/gloch/Desktop/A1/png%20lbcw%20logo.png" type="image/x-icon">  
   <title>Chris's Auto Detailing</title>
-    <meta charset="UTF-8>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
-  <h1>Chris's Auto Detailing</h1>
-  <img src="‪file:///C:/Users/gloch/Pictures/LBCW/wash%202.0.png">
+  <h1 style="font-size: 100px; color: #CC2EFA; font-family: fantasy; text-align: middle ">Chris's Auto Detailing</h1>
+  <img src;="file:///C:/Users/gloch/Desktop/A1/wash%202.0.png"
+
 </body>
 </html>
