--- a/Style.html
+++ b/Style.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 
-	<H1 style=; font-size: 100px; color: #CC2EFA ">Chris's Auto Detail</H1>
+	<h1 style=" font-size: 100px; font-family: monospace; color: #CC2EFA;">Chris's Auto Detail</H1>
+	<h2>Long beach area and seroundings</h2>
 </body>
 </html>
